syntax = "proto3";

package memos.store;

import "store/common.proto";

option go_package = "gen/store";

message Webhook {
  int32 id = 1;

  int64 created_ts = 2;

  int64 updated_ts = 3;

  int32 creator_id = 4;

  RowStatus row_status = 5;

  string name = 6;

  string url = 7;
}
